修正员工姓名错误问题。

--- a/vhr/mailserver/src/main/resources/templates/mail.html
+++ b/vhr/mailserver/src/main/resources/templates/mail.html
@@ -5,11 +5,11 @@
     <title>入职欢迎邮件</title>
 </head>
 <body>
-欢迎 <span th:text="${nicename}"></span> 加入。
+欢迎 <span th:text="${niceName}"></span> 加入。
 <table border="1">
     <tr>
         <td>姓名</td>
-        <td th:text="${nicename}"></td>
+        <td th:text="${niceName}"></td>
     </tr>
     <tr>
         <td>部门</td>
